# cowtapult

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cowtapult.sublime-project  cowtapult.sublime-workspace
docs/: enemy-properties.txt  player-properties.txt
src/: client.cpp  client.hpp
src/gpu/: handler.cpp  handler.hpp  immediate.cpp  immediate.hpp  model.cpp  model.hpp  opengl.hpp
src/gui/: gui.cpp  gui.hpp  gui_manager.cpp  gui_manager.hpp
src/io/: game_context.hpp  memory.hpp  trace.hpp
src/media/: texture_manager.cpp  texture_manager.hpp  window.cpp  window.hpp
src/scene/: scene.hpp  scene_alien_invasion.hpp  scene_manager.cpp  scene_manager.hpp
src/tools/: pickup.cpp  pickup.hpp
src/world/: camera.cpp  camera.hpp  entity_base.cpp  entity_base.hpp  entity_enemy.cpp  entity_enemy.hpp  entity_player.cpp  entity_player.hpp  object.hpp  world_manager.cpp  world_manager.hpp
